--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,13 +24,15 @@ th, td {
 th {
   background-color: $vin-blue;
   color: white;
+  white-space: nowrap;
+  padding: 10px
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
 
 td {
   white-space: nowrap;
-	padding: 5px;
+	padding: 10px;
 }
 
 h1 {
